# cabal-cxx-options

./: a.cabal  a.hs  b.cxx  c.c
