cabal-version: 3.8
name:          a
version:       0

executable test_addForeignSource
  build-depends: base, template-haskell

  main-is:       a.hs
  -- this doesn't work while must
  cc-options:    -DONE=1
  cxx-options:   -DTWO=2
  -- this works but is a workaround
  -- ghc-options:   -optc=-DONE=1
  -- ghc-options:   -optcxx=-DTWO=2

executable test_c_cxx_sources
  build-depends: base
  main-is:       main.hs

  cxx-sources:   b.cxx
  c-sources:     c.c
  -- this works
  cc-options:    -DTHREE=3
  cxx-options:   -DFOUR=4
